fix startpage link spacing

--- a/modules/start/Links.scss
+++ b/modules/start/Links.scss
@@ -4,7 +4,7 @@
 
   .links__collectionItem {
     cursor: pointer;
-    padding: 0.4rem !important;
+    padding: 0.35rem !important;
 
     &.active {
       background-color: initial;
